Revision history for pantry

{{$NEXT}}

    [Added]

    - 'pantry sync' downloads the node run-report to the 'reports'
      directory in the pantry.  This is useful for examining the
      state of the node and eventually may be useful for searching
      nodes based on configuration/state data.

    [Fixed]

    - 'pantry sync' was crashing due to Net::OpenSSH not working with
      Path::Class objects; fixed by stringifying paths before handing
      off to Net::OpenSSH

    [Changed]

    - 'pantry list' outputs nodes alphabetically

0.003     2012-05-02 18:06:55 America/New_York

    [Fixed]

    - 'pantry list' now lists node *names* not *filenames*

0.002     2012-05-02 17:15:46 America/New_York

    [Added]

    - 'pantry apply' and 'pantry strip' commands added to support
      applying/stripping recipes and attributes for nodes at the command
      line instead of requiring an external editor

    - 'pantry list' command added to list nodes managed in a pantry

    - 'pantry show' command added to print out node JSON data

    [Fixed]

    - 'pantry sync' now includes the "--delete" flag during rsync

    [Changed]

    - pantry now uses model classes (Pantry::Model::*) to separate
      manipulation of pantry objects from the command line app
      interface

0.001     2012-01-13 18:22:46 America/New_York
    - Initial release
